<resources>
    <string name="app_name">Acmarket</string>
    <!--PROD-->
    <string name="URL_HOST">HTTPS://appis-acmarket.expressmyapp.com/api/</string>

    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="entregas">
        <item>Motocicleta</item>
        <item>Automovil</item>
    </string-array>
    <string name="title_departamentos">Departamentos</string>
    <string name="title_tiendas">Tiendas</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_pedidos_nuevos">Nuevos pedidos</string>
    <string name="title_notificaciones">Notificaciones</string>
    <string name="title_invita_amigos">Invitar a amigos</string>
    <string name="title_historia_pedidos">Historia de pedidos</string>
    <string name="title_soporte">Soporte</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_ayuda">Ayuda</string>
    <string name="title_cerrar_sesion">Cerrar sesión</string>
    <string name="title_proximos">Proximos</string>
    <string name="title_anteriores">Anteriores</string>
    <string name="title_buscar">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="month_array">
        <item>Mes</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="card_created">Tarjeta registrada correctamente</string>
    <string name="card_added">Tarjeta registrada</string>
    <string name="invalid_card_number">Número inválido</string>
    <string name="invalid_holder_name">Titular es requerido</string>
    <string name="invalid_cvv">Código de seguridad inválido</string>
    <string name="invalid_expire_date">Fecha de expiracion inválida</string>
    <string name="progress_message">Procesando...</string>
    <string name="declined">La tarjeta fue rechazada</string>
    <string name="expired">La tarjeta ha expirado</string>
    <string name="insufficient_funds">La tarjeta no tiene fondos suficientes</string>
    <string name="stolen_card">La tarjeta ha sido identificada como una tarjeta robada</string>
    <string name="suspected_fraud">La tarjeta ha sido identificada como una tarjeta fraudulenta.</string>
    <string name="communication_error">No se puede establecer comunicacion con el servidor</string>
    <string name="already_exists">La tarjeta ya se encuentra registrada</string>
    <string name="error_creating_card">Ocurrio un error al regitrar la tarjeta</string>
    <string name="google_api_key1" translatable="false">AIzaSyDHbtaNdd8CjgHXhLetYIcFbFAG0IXjwCI</string>
    <string name="google_places">AIzaSyA3WPdLpAhClGKN3HUL6xjXs30jgHMx91k</string>
    <string name="channel_name">ACMARKET_CHANNEL</string>
    <string name="channel_description">channel de acMarket</string>
    <string name="CHANNEL_ID">ACMARKETCHANNEL</string>
    <string name="URL_TUTORIAL">https://www.acmarket.com.mx/tutorial.html</string>
    <string name="URL_ENCUESTA">https://www.acmarket.com.mx/CUESTIONARIO.php?</string>

    <string name="facebook_app_id">404129260722215</string> <string name="fb_login_protocol_scheme">fb404129260722215</string>


</resources>
