<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_tiendas"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_tiendas" />
    <item
        android:id="@+id/pedidosMainFragment"
        android:icon="@drawable/documento"
        android:title="@string/title_pedidos" />
    <item
        android:id="@+id/busquedaPorCategoria"
        android:icon="@drawable/ic_search"
        android:title="@string/title_buscar"
        ></item>
    <item
        android:id="@+id/navigation_soporte"
        android:icon="@drawable/soporte"
        android:title="@string/title_soporte" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/usuario"
        android:title="@string/title_perfil" />

</menu>
